fix: dark mode opt out overriden by django cms

--- a/cms/src/taccsite_custom/texascale_cms/static/texascale_cms/css/2025/3_generics/root.css
+++ b/cms/src/taccsite_custom/texascale_cms/static/texascale_cms/css/2025/3_generics/root.css
@@ -1,3 +1,4 @@
-:root {
+/* To opt out of dark mode until supported */
+:root.cms-ready {
   color-scheme: only light;
 }
